// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should disable the button 1`] = `
<div>
  <button
    class="hover:scale-105 px-3 py-2 md:w-max w-full text-sm rounded-lg 
            duration-300 font-medium opacity-50 cursor-not-allowed"
    disabled=""
    style="color: rgb(236, 240, 241); background-color: rgb(44, 62, 80);"
    type="button"
  >
    Accept all cookies
  </button>
</div>
`;

exports[`Button should match the snapshot 1`] = `
<div>
  <button
    class="hover:scale-105 px-3 py-2 md:w-max w-full text-sm rounded-lg 
            duration-300 font-medium cursor-pointer"
    style="color: rgb(236, 240, 241); background-color: rgb(44, 62, 80);"
    type="button"
  >
    Accept all cookies
  </button>
</div>
`;
